--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
     <div id="drawing"></div>
 </body>
+<script src="Render.js" type="module"></script>
 <script src="main.js" type="module"></script>
 
 </html>
